--- a/ecommerce/template/partials/header.html
+++ b/ecommerce/template/partials/header.html
@@ -20,6 +20,9 @@
                     </form>
                 </div>
             </nav>
+            <button class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" style="margin-right:10px;">
+                       <a href="{% url 'cart' %}">Cart</a></button>
+
                 {% if user.is_authenticated %}
 
 
@@ -33,9 +36,11 @@
 
                      </button>
                     </a>
-                <br>
 
-          <p>Welcome {{user.username}}</p>
+
+
+
+           <p>Welcome {{user.username}}</p>
 
 
 
